# Shop

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  qwe.py  requirement.txt
apps/cart/: cart.py  urls.py  views.py
apps/coupons/: admin.py  models.py  urls.py  views.py
apps/coupons/migrations/: 0001_initial.py
apps/likes/: context_processors.py  likes.py  views.py
apps/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_postal_code.py  0003_deliverymethod_paymentmethod_alter_country_options_and_more.py  0004_order_patronymic.py  0005_order_stripe_id.py  0006_alter_order_user.py  0007_order_coupon_order_discount.py
apps/payment/: views.py  webhooks.py
apps/shop_app/: admin.py  apps.py  models.py  recommender.py  signals.py  urls.py  utils.py  views.py
apps/shop_app/migrations/: 0001_initial.py  0002_alter_category_category.py  0003_alter_category_slug_alter_product_subcategory.py
apps/user/: urls.py  views.py
nginx/: Dockerfile  shop.conf
project/shop/: celery.py  config.py  settings.py  urls.py
project/templates/: base.html
shop/: celery.py  config.py  settings.py  urls.py
static/css/: cart.css  cart.css.map  cart.scss  null.css  null.css.map  order.css  order.css.map  product_detail_style.css  product_detail_style.css.map  product_detail_style.scss  slider.css  style.css  style.css.map  style.scss  user.css  user.css.map  user.scss
static/js/: cart.js  coupon.js  likes.js  order.js  select.js  slider.js
templates/: base.html
(+82 files in other folders)
